# torvek

./: .gitignore  Cargo.toml  TODO.md
admin-app/: Cargo.toml  Makefile  index.html  ory-config.json  tailwind.config.js
admin-app/env/: dev.env  prod.env
admin-app/scripts/: build-staging.sh  run-dev.sh
admin-app/src/: env.rs  lib.rs  main.rs
admin-app/src/api/: auth.rs  common.rs  mod.rs  orders.rs  parts.rs  quotations.rs
admin-app/src/api/models/: auth.rs  common.rs  orders.rs
admin-app/src/clients/: common.rs  mod.rs  orders.rs  parts.rs
admin-app/src/components/: dropzone_upload.rs  mod.rs  sidebar.rs
admin-app/src/components/orders/: add_order_payouts_table.rs  add_order_payouts_table_row.rs  materials_dropdown.rs  mod.rs  table.rs  table_row.rs  tolerances_dropdown.rs
admin-app/src/components/parts/: mod.rs  part_quote_card.rs  part_quotes_table.rs  part_quotes_table_row.rs  part_to_order_table.rs  part_to_order_table_row.rs  table.rs  table_row.rs
admin-app/src/components/quotations/: created_quotations_collapsible.rs  created_quotations_table.rs  created_quotations_table_row.rs  mod.rs  table.rs  table_row.rs
admin-app/src/models/: api_error.rs  error.rs  file.rs  mod.rs  order.rs  part.rs  quotation.rs
admin-app/src/pages/: dashboard.rs  login.rs  mod.rs
api/: .gitignore  Cargo.toml  Makefile  TODO.md  docker-compose.test.yaml  docker-compose.yaml
api-boundary/: Cargo.toml
api-boundary/src/: lib.rs
api-boundary/src/common/: api_error.rs  error.rs  file.rs  into_error_response.rs  mod.rs  money.rs
api-boundary/src/orders/: errors.rs  models.rs  requests.rs  responses.rs
api-boundary/src/parts/: errors.rs  mod.rs  models.rs  requests.rs  responses.rs
api-boundary/src/payments/: errors.rs  mod.rs  requests.rs  responses.rs
api-boundary/src/projects/: errors.rs  models.rs  requests.rs  responses.rs
api-boundary/src/quotations/: errors.rs  models.rs  requests.rs  responses.rs
api/config/kratos/: dev.yaml  identity.schema.json  test.yaml
api/config/kratos/admins/: dev.yaml  identity.schema.json  test.yaml
api/config/kratos/customers/: config.yaml  identity.schema.json
api/infra/: cloudfront.yaml  dynamodb.yaml  ec2.yaml  lambda.yaml  s3-bucket.yaml  s3-permissions.yaml
api/infra/aws/: api-gateway.yaml  certificate-manager.yaml  cloudfront.yaml  dynamodb.yaml  lambda.yaml  s3-bucket.yaml  s3-permissions.yaml  ses.yaml
api/infra/aws/prod/: api-gateway.yaml  certificate-manager.yaml  cloudfront.yaml  dynamodb.yaml  lambdas.yaml  s3-buckets.yaml  ses.yaml
api/infra/aws/staging/: api-gateway.yaml  certificate-manager.yaml  cloudfront.yaml  dynamodb.yaml  lambdas.yaml  s3-buckets.yaml  ses.yaml
api/infra/stripe/dev/: .terraform.lock.hcl  webhooks.tf
api/infra/stripe/prod/: terraform.tfstate  webhooks.tf
api/infra/stripe/staging/: terraform.tfstate  webhooks.tf
api/scripts/: run-dev.sh  run-test.sh
api/scripts/kratos/: create-admin-identity.sh  entrypoint-test.sh  kratos-customers-entrypoint.sh
api/scripts/local_file_converter/: Dockerfile  example.json  main.py
api/scripts/localstack/: orders.sh  part_price_options.sh  parts.sh  projects.sh  quotations.sh  ses.sh
api/src/: app.rs  app_state.rs  config.rs  lib.rs  main.rs
api/src/auth/: controllers.rs  routes.rs
api/src/auth/application/: mod.rs
api/src/auth/domain/: errors.rs  mod.rs  session.rs  user.rs
api/src/auth/models/: inputs.rs  mappers.rs  mod.rs  session.rs
api/src/auth/usecases/: admin_login.rs  admin_logout.rs  get_admin_session.rs  get_session.rs  login.rs  login_client.rs  login_user.rs  logout.rs  logout_client.rs  logout_user.rs  mod.rs  register.rs  register_client.rs  register_user.rs
api/src/landing/: controllers.rs  mod.rs  routes.rs
api/src/landing/usecases/: contact_admins.rs  mod.rs
api/src/middleware/: mod.rs
api/src/orders/: controllers.rs  mod.rs  routes.rs
api/src/orders/domain/: dynamodb_order_item.rs  errors.rs  mod.rs  order.rs
api/src/orders/models/: dynamodb_order_item.rs  inputs.rs  mod.rs  order.rs  responses.rs
api/src/orders/repositories/: mod.rs  orders.rs  orders_dynamodb.rs
api/src/orders/services/: mod.rs  orders_creation.rs  (+1 more)
api/src/parts/: controllers.rs  mod.rs  routes.rs
api/src/payments/: controllers.rs  mod.rs  routes.rs
api/src/projects/: controllers.rs  mod.rs  routes.rs
api/src/quotations/: controllers.rs  mod.rs  routes.rs
api/src/repositories/: mod.rs  orders.rs  orders_dynamodb.rs  parts.rs  parts_dynamodb.rs  projects.rs  projects_dynamodb.rs  quotations.rs  quotations_dynamodb.rs  quotes.rs  quotes_dynamodb.rs  transaction.rs  transaction_dynamodb.rs
api/src/services/: admin_identity_manager_ory.rs  emailer.rs  emailer_ses.rs  identity_manager.rs  identity_manager_ory.rs  mod.rs  object_storage.rs  object_storage_s3.rs  payment_processor.rs  stripe.rs  stripe_client.rs
api/src/shared/: api_error.rs  error.rs  file.rs  into_error_response.rs  mod.rs  money.rs  usecase.rs
api/src/utils/: dynamodb_key_codec.rs  mod.rs  workdays.rs
api/tests/: auth.rs  mod.rs
api/tests/common/: app.rs  mod.rs  user_generator.rs
client-app/: Cargo.toml  Makefile  index.html  tailwind.config.js
client-app/scripts/: build-prod.sh  run-dev.sh
client-app/src/: env.rs  lib.rs  main.rs
client-app/src/api/: auth.rs  common.rs  mod.rs  orders.rs  parts.rs  payments.rs  projects.rs  quotations.rs
client-app/src/components/: dropzone_upload.rs  loading.rs  mod.rs  sidebar.rs
client-app/src/models/: mod.rs  reactive_part.rs
client-app/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  parts.rs  projects.rs  quotations.rs  register.rs
clients/: Cargo.toml
clients/src/: admin_orders.rs  auth.rs  common.rs  lib.rs  orders.rs  parts.rs  projects.rs  quotations.rs  suppliers_orders.rs
supplier-app/: Cargo.toml  Makefile  index.html
supplier-app/scripts/: run-dev.sh
supplier-app/src/: lib.rs  main.rs
supplier-app/src/clients/: auth.rs  common.rs
supplier-app/src/components/: mod.rs  sidebar.rs
supplier-app/src/models/: users.rs
supplier-app/src/pages/: dashboard.rs  home.rs
(+191 files in other folders)
