[package]
name = "admin-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-boundary = { path = "../api-boundary" }
chrono = { version = "0.4.31", features = ["serde"] }
console_log = "1.0.0"
gloo-net = "0.4.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
log = "0.4.20"
ory-kratos-client = { path = "../ory-kratos-client" }
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
thiserror = "1.0.50"
web-sys = { version = "0.3.66", features = ["FileList", "HtmlInputElement", "File"] }
serde_json = "1.0.108"
