[package]
name = "admin-app"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
console_log = "1.0.0"
gloo-net = "0.6.0"
leptos = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
thiserror = "1.0.50"
web-sys = { version = "0.3.69", features = ["FileList", "HtmlInputElement", "File"] }
iso_currency = { version = "0.5.0", features = ["with-serde"] }
http = "1.0.0"
thaw = { version = "0.3.2", features = ["csr"] }
leptos-use = "0.13.5"
serde-enum-str = "0.4.0"
rusty-money = "0.4.1"
serde_json = "1.0.140"
