[package]
name = "api-boundary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.193"
serde = { version = "1.0.193", features = ["derive"] }
serde-enum-str = "0.4.0"
async-stripe = { version = "*", default-features = false, features = ["runtime-tokio-hyper", "webhook-events"] } # TODO: Update once https://github.com/arlyon/async-stripe/issues/473 is fixed.
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
