[package]
name = "api-boundary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.193"
serde = { version = "1.0.193", features = ["derive"] }
serde-enum-str = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
iso_currency = { version = "0.5.0", features = ["with-serde"] }
serde_json = "1.0.113"
rusty-money = "0.4.1"
names = { version = "0.14.0", default-features = false }
thiserror = "1.0.61"
http = "1.1.0"
axum = { version = "0.7.5", default-features = false, features = ["json"] }
uuid = { version = "1.10.0", features = ["v7"] }
bs58 = "0.5.1"
url = { version = "2.5.2", features = ["serde"] }
anyhow = "1.0.90"
