[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-boundary = { path = "../api-boundary" }
async-stripe = { version = "0.39.1", default-features = false, features = [
    "runtime-tokio-hyper",
    "checkout",
    "connect",
    "webhook-endpoints",
    "webhook-events",
] }
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.50.0"
aws-sdk-s3 = "1.57.0"
axum = { version = "0.7.9", features = ["json", "macros"] }
axum-aws-lambda = "0.9.0"
axum-extra = { version = "0.9.6", features = ["cookie", "cookie-private", "cookie-signed"] }
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.2.0"
lambda_http = "0.13.0"
reqwest = { version = "0.12.8", features = ["json"] } # Version need to match version used in ory-kratos-client
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.133"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = { version = "0.1.40", features = [] }
serde-enum-str = "0.4.0"
url = { version = "2.5.2", features = ["serde"] }
ory-kratos-client = { path = "../ory-kratos-client" }
uuid = { version = "1.11.0", features = ["v7"] }
bs58 = "0.5.1"
tracing-subscriber = "0.3.18"
base64 = "0.22.1"
iso_currency = "0.5.1"
async-trait = "0.1.83"
axum-test = "16.4.1"
time = "0.3.41"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.59", features = ["vendored"] }
openssl-sys = { version = "0.9.95", features = ["vendored"] }
