[package]
name = "client-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-boundary = { path = "../api-boundary" }
console_log = "1.0.0"
leptos = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
log = "0.4.20"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
wasm-bindgen-futures = "0.4.38"
http = "1.0.0"
gloo-net = "0.5.0"
thiserror = "1.0.50"
leptos_meta = { version = "0.6.3", features = ["csr"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_derive = "1.0.193"
rusty-money = "0.4.1"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.67", features = ["FileList", "HtmlInputElement", "File"] }
thaw = { version = "0.2.0-beta", features = ["csr"] }
