[package]
name = "client-app"
version = "0.1.0"
edition = "2021"


[dependencies]
api-boundary = { path = "../api-boundary" }
clients = { path = "../clients" }
console_log = "1.0.0"
leptos = { version = "0.6.12", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
log = "0.4.20"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
wasm-bindgen-futures = "0.4.38"
http = "1.0.0"
gloo-net = "0.5.0"
thiserror = "1.0.50"
leptos_meta = { version = "0.6.3", features = ["csr"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_derive = "1.0.193"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["FileList", "HtmlInputElement", "File"] }
thaw = { version = "0.3.2", features = ["csr"] }
three-d = "0.17.0"
leptos-use = "0.10.3"
winit = "0.28.7"
three-d-asset = { version = "0.7.0", features = ["http", "data-url", "obj", "gltf"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
bevy = { version = "0.14.0", features = ["webgpu"] }
