[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-boundary = { path = "../api-boundary" }
gloo-net = "0.5.0"
http = "1.0.0"
ory-kratos-client = { path = "../ory-kratos-client" }
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = { version = "1.0.56", features = [] }
web-sys = { version = "0.3.67", features = ["RequestCredentials"] }
