[package]
name = "supplier-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-boundary = { path = "../api-boundary" }
clients = { path = "../clients" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
ory-kratos-client = { path = "../ory-kratos-client" }
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.3", features = ["csr", "nightly"] }
log = "0.4.20"
gloo-net = "0.5.0"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
http = "1.0.0"
